UPDATED | about, equimpents, join and projects html created | script.js created and buttons linked

--- a/2.html
+++ b/2.html
@@ -10,11 +10,17 @@
     </div>
 
     <div class="navbar">
-        <a href="random page.html">Home</a>
+        <button id="buttonHome">Home</button>
+        <button id="buttonAbout">About</button>
+        <button id="buttonProjects">Projects</button>
+        <button id="buttonJoin">Join</button>
+        <button id="buttonEquipments">Equipment</button>
+
+        <!-- <a href="random page.html">Home</a>
         <a href="random page.html">About</a>
         <a href="random page.html">Projects</a>
         <a href="random page.html">Join</a>
-        <a href="random page.html">Equipment</a>
+        <a href="random page.html">Equipment</a> -->
     </div>
 
     <div class="main">
@@ -34,5 +40,7 @@
 <div class="two">Project 2</div>
 <div class="three">Project 3</div>
 <div class="four">project 4</div>
+
+<script src="script.js"></script>
 </body>
 </html>
