--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUComp - Lancaster University Leipzig's Computer Science Society</title>
+    <link rel="stylesheet" href="stylesheets/header_footer.css">
     <link rel="stylesheet" href="stylesheets/index.css">
     <link rel="icon" href="logos/society_logo.png" type="image/png">
 </head>
@@ -47,7 +48,7 @@
 
     <div class = "navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li class = "index"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="join.html">Join</a></li>
